--- a/app/templates/app/GUI_test.html
+++ b/app/templates/app/GUI_test.html
@@ -17,27 +17,6 @@
     <title>GUI</title>
   </head>
   <body>
-    {% comment %} <button id="navbber_togger" type="button" data-toggle="collapse" data-target="#navbarNAV" aria-controls="navbarNAV" 
-    aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar_icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNAV">
-      <!-- 1st navbar  -->
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home<spam class="sr-only">(current)</spam></a>
-        </li>
-        <li class="nav-bar dropdown">
-          <a id="navbar_dropdown_meun" class="nav-bar dropdown-toggle" href="#" data-toggle="dropdown" aria-haspoupa="true" 
-          aria-expanded="false">
-            menuItem
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbar_dropdown_meun">
-            <!-- -->>
-          </div>
-        </li>
-      </ul>
-    </div> {% endcomment %}
     
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">LOGO</a>
@@ -59,34 +38,47 @@
     </nav>
 
     <div id="GUI_window_navbar">
+
       <span class="close">&times;</span>
+      <a class="a">hello</a>
+
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Tools</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#tool_bar" 
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="tool_bar">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a id="line" class="nav-link" href="#">line</a>
+            </li>
+            <li cla
+            <li class="nav-item">
+              <a id="circle" class="nav-link" href="#">circle</a>
+            </li>
+            <li class="nav-item">
+              <a id="rectengle" class="nav-link" href="#">rectengle</a>
+            </li>
+            <li class="nav-item">
+              <a id="triengle" class="nav-link" href="#">triengle</a>
+            </li>
+            
+          </ul>
+        </div>
+      </nav>
+      
       <canvas class="canvas_test"></canvas>
+
     </div>
 
     <script type="text/javascript">
-      var canvas2 = $("#GUI_window_navbar .canvas_test");
-      var ctx2 = canvas2[0].getContext("2d");
-      $("document").ready(function()
-      {
-        $("#navbarNav2 #nav_Canvas").on("click", function()
-        {
-          $("#GUI_window_navbar .canvas_test").css("display", "block");
-          Draw(canvas2, ctx2);
-        });
-        $(".class").on("click", function()
-        {
-          $("#GUI_window_navbar .canvas_test").css("display", "none");
-        });
-      });
+      canvas_main();
     </script>
     
     
     <div class='container'>
-
-      {% comment %} <h1>EEEEEEEEEEEEEEEEEEEEEEEE</h1>
-      <img id="image" src={% static "./media/hio01.png" %} href="javascript:void(0);" alt="image">
-      <img id="images_container" src="/Media/Icannotaccept.jpg"></img>
-      <br> {% endcomment %}
       <div id="IMGarray">
         <img class="bottom" src="/Media/IMG_1018.JPG"></img>
         <img class="top" src="/Media/HSa78ycfqdiVYAcM.jpg"></img>
