--- a/static/css/canvas_styles.css
+++ b/static/css/canvas_styles.css
@@ -1,20 +1,34 @@
-#GUI_window_navbar .canvas_test
+#GUI_window_navbar 
 {
     display: none; /* Hidden by default */
     position: absolute; /*Stay in place*/
-    background-color: red;
-    padding-top: 100px;
+    background-color: black;
     z-index: 1;
     margin-left: auto;
     margin-right: auto;
-    /* left: 0;
-    top: 0; */
-    width: 70%;
-    height: 70%;
-    /* max-width: 500;
-    max-height: 500; */
-    animation-name: zome;
-    animation-duration: 0.7s;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+
+    grid-template-areas: "head  head   close"
+                         "tools canvas canvas"
+                         "tools canvas canvas";
+    grid-template-columns: 150px 1fr 30px;
+    grid-template-rows: 50px 1fr 1fr;
+}
+
+#GUI_window_navbar .canvas_test
+{
+    animation-name: zoom;
+    animation-duration: 0.6s;
+    background-color: red;
+    margin: auto;
+    display: block;
+    grid-area: canvas;
+    /* width: 700;
+    height: 700; */
+    /* max-width: 700px; */
 }
 
 @keyframes zoom
@@ -25,11 +39,32 @@
 
 .close
 {
+    display: inline;
     position: absolute;
     top: 15px;
     right: 35px;
+    z-index: 2;
     color: white;
     font-size: 40px;
     font-weight: bold;
     transition: 0.3s;
+    grid-area: close;
+}
+
+#GUI_window_navbar #tool_bar
+{
+    /* width: 100%;
+    height: 100%; */
+    /* top: 0;
+    z-index: 3;
+    display: inline;
+    background-color: aqua; */
+    background-color: white;
+    grid-area: head;
+}
+
+#GUI_window_navbar .a
+{
+    background-color: chartreuse;
+    grid-area: tools;
 }
