--- a/app/templates/app/GUI_test.html
+++ b/app/templates/app/GUI_test.html
@@ -59,10 +59,13 @@
               <a id="circle" class="nav-link" href="#">circle</a>
             </li>
             <li class="nav-item">
-              <a id="rectengle" class="nav-link" href="#">rectengle</a>
+              <a id="rectangle" class="nav-link" href="#">rectangle</a>
             </li>
             <li class="nav-item">
-              <a id="triengle" class="nav-link" href="#">triengle</a>
+              <a id="triangle" class="nav-link" href="#">triangle</a>
+            </li>
+            <li class="nav-item">
+              <a id="delete" class="nav-link" href="#">delete</a>
             </li>
             
           </ul>
