--- a/static/css/canvas_styles.css
+++ b/static/css/canvas_styles.css
@@ -22,7 +22,7 @@
 {
     animation-name: zoom;
     animation-duration: 0.6s;
-    background-color: red;
+    background-color: azure;
     margin: auto;
     display: block;
     grid-area: canvas;
