--- a/app/templates/app/GUI_test.html
+++ b/app/templates/app/GUI_test.html
@@ -28,10 +28,13 @@
       <div class="collapse navbar-collapse" id="navbarNav2">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="{% url 'login' %}">User login <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a id="nav_Canvas" class="nav-link" href="#">Canvas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Home</a>
           </li>
         </ul>
       </div>
