--- a/app/templates/app/register.html
+++ b/app/templates/app/register.html
@@ -10,7 +10,7 @@
   <head>
     <link href={%static "./css/login.css" %} rel="stylesheet" text="text/css" >
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>Register</title>
   </head>
   <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -33,20 +33,10 @@
 </nav>
   
     <div class='login'>
-      <form action="{% url 'login' %}"method="post">{% csrf_token %}
-        {% if request.user.is_authenticated %}
-          <p>{{request.user}}: you already login</p>
-        {% endif %}
-        <label for="username">username: </label>
-        <input id="username" type="text" name="username" value="">
-        <br/>
-        <label for="password">password: </label>
-        <input id="password" type="password" name="password" value="">
-        <br/>
-        <input type="submit" value="login">
-        <input type="hidden" name="next" value="{{ next }}" />
-        <br/>
-        <a href="{% url 'register' %}" method="post">Register</a>
+        <h1>Register</h1>
+      <form action="" method="post">{% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" href="{% url 'register' %}" value="Submit userdata"></a>
       </form>
     </div>
   </body>
