--- a/app/templates/app/GUI_test.html
+++ b/app/templates/app/GUI_test.html
@@ -80,6 +80,9 @@
             <li class="nav-item">
               <a id="delete" class="nav-link" href="#">delete</a>
             </li>
+            <li class="nav-item">
+              <a id="clear" class="nav-link" href="#">clear</a>
+            </li>
             
           </ul>
         </div>
