--- a/app/templates/app/GUI_test.html
+++ b/app/templates/app/GUI_test.html
@@ -83,6 +83,9 @@
             <li class="nav-item">
               <a id="clear" class="nav-link" href="#">clear</a>
             </li>
+            <li class="nav-item">
+              <a id="Save" class="nav-link" href="#">Save</a>
+            </li>
             
           </ul>
         </div>
