--- a/app/templates/app/userpage.html
+++ b/app/templates/app/userpage.html
@@ -5,6 +5,7 @@
     <title>Title</title>
   </head>
   <body>
+    {% include "app/navbar.html" %}
     <div class='container'>
       <h1>HOME</h1>
       <h2>Hello World!</h2>
