--- a/app/templates/app/GUI_test.html
+++ b/app/templates/app/GUI_test.html
@@ -17,7 +17,7 @@
     <title>GUI</title>
   </head>
   <body>
-    
+    {% comment %} {% block navbar %}
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">LOGO</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav2" 
@@ -55,6 +55,8 @@
         </ul>
       </div>
     </nav>
+    {% endblock navbar %} {% endcomment %}
+    {% include "app/navbar.html" %}
 
     <div id="GUI_window_navbar">
 
