--- a/app/templates/app/login.html
+++ b/app/templates/app/login.html
@@ -8,12 +8,13 @@
 {% bootstrap_messages %}
 <html lang="en">
   <head>
+    
     <link href={%static "./css/login.css" %} rel="stylesheet" text="text/css" >
     <meta charset="UTF-8">
     <title>Login</title>
   </head>
   <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+{% comment %} <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="{% url 'GUI_test' %}">Home</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav2" 
     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,7 +31,8 @@
         </li>
         </ul>
     </div>
-</nav>
+</nav> {% endcomment %}
+  {% include  'app/navbar.html' %}
   
     <div class='login'>
       <form action="{% url 'login' %}"method="post">{% csrf_token %}
