--- a/app/templates/app/app.html
+++ b/app/templates/app/app.html
@@ -8,7 +8,7 @@
     <div class='container'>
       <h1>HOME</h1>
       <h2>Hello World!</h2>
-      <form action="/app/GUI_test/"method="post">{% csrf_token %}
+      <form action="/app/GUI_test/"method="get">{% csrf_token %}
         <input type="submit"value="Get in to GUI page">
       </form>
     </div>
