--- a/app/templates/app/app.html
+++ b/app/templates/app/app.html
@@ -2,15 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>履歴書</title>
   </head>
   <body>
     <div class='container'>
-      <h1>HOME</h1>
-      <h2>Hello World!</h2>
-      <form action="/app/GUI_test/"method="get">
-        <input type="submit"value="Get in to GUI page">
-      </form>
+      <tr>
+        <th>Name: Ip chak yin </th><th>Sex: Male</th><th><div><img src=''></img></div></th>
+      </tr>
+      <a>Name: Ip chak yin </a><a>Sex: Male</a><div><img src=''></img></div>
+      <br>
+      <p>Brithday: 3th february (Age: 22)</p>
+      <p>Address: 新潟県長岡市南七日町31-10ラトゥールサガンA1-4</p>
+      <p>Phone number: 08051992571</p>
+      <p>Address: 新潟県長岡市南七日町31-10ラトゥールサガンA1-4</p>
+      <p>Email Address: hqabcd123@gmail.com</p>
+      <p>Address: 新潟県長岡市南七日町31-10ラトゥールサガンA1-4</p>
+      <a> Year </a><a> Month </a><a> Degree </a>
+
+      <br>
+
     </div>
+    <form action="/app/GUI_test/"method="get">
+      <input type="submit"value="Get in to GUI page">
+    </form>
   </body>
 </html>
