--- a/app/templates/app/app.html
+++ b/app/templates/app/app.html
@@ -6,10 +6,11 @@
   </head>
   <body>
     <div class='container'>
-      <tr>
-        <th>Name: Ip chak yin </th><th>Sex: Male</th><th><div><img src=''></img></div></th>
-      </tr>
-      <a>Name: Ip chak yin </a><a>Sex: Male</a><div><img src=''></img></div>
+      <table>
+        <tr>
+          <th>Name: Ip chak yin </th><th>Sex: Male</th><th><div><img src=''></img></div></th>
+        </tr>
+      </table>
       <br>
       <p>Brithday: 3th february (Age: 22)</p>
       <p>Address: 新潟県長岡市南七日町31-10ラトゥールサガンA1-4</p>
@@ -17,7 +18,14 @@
       <p>Address: 新潟県長岡市南七日町31-10ラトゥールサガンA1-4</p>
       <p>Email Address: hqabcd123@gmail.com</p>
       <p>Address: 新潟県長岡市南七日町31-10ラトゥールサガンA1-4</p>
-      <a> Year </a><a> Month </a><a> Degree </a>
+      <table>
+        <tr>
+          <th>Year</th><th>Month</th><th>degree</th>
+        </tr>
+        <tr>
+          <td>1997</td><td>02</td><td>eeeee</td>
+        </tr>
+      </table>
 
       <br>
 
