--- a/app/templates/app/navbar.html
+++ b/app/templates/app/navbar.html
@@ -21,7 +21,7 @@
             <a id="nav_Canvas" class="nav-link" href="#">Canvas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="{% url 'product' %}">Product</a>
           </li>
         </ul>
       </div>
