--- a/app/templates/app/app.html
+++ b/app/templates/app/app.html
@@ -30,7 +30,7 @@
       <br>
 
     </div>
-    <form action="/app/GUI_test/"method="get">
+    <form action="{% url 'GUI_test' %}"method="get">
       <input type="submit"value="Get in to GUI page">
     </form>
   </body>
