--- a/app/templates/app/product/add_product.html
+++ b/app/templates/app/product/add_product.html
@@ -1,5 +1,5 @@
 {% load static %}
-{% include "app/bootstrap.html" %}
+{% include "app/Components/bootstrap.html" %}
 
 <html lang="en">
   <head>
@@ -7,7 +7,7 @@
     <title>Add Product</title>
   </head>
   <body>
-    {% include "app/navbar.html" %}
+    {% include "app/Components/navbar.html" %}
     <div>
       <form method="post">
         {{form.as_p}}
