--- a/app/templates/app/login.html
+++ b/app/templates/app/login.html
@@ -1,38 +1,17 @@
 <!DOCTYPE html>
 {% load static %}
-{% load bootstrap4 %}
-{# Load CSS and JavaScript #}
-{% bootstrap_css %}
-{% bootstrap_javascript jquery='full' %}
-{# Display django.contrib.messages as Bootstrap alerts #}
-{% bootstrap_messages %}
+{% include "app/Components/bootstrap.html" %}
 <html lang="en">
   <head>
-    
+    {% include "app/Components/canvas_link.html" %}
     <link href={%static "./css/login.css" %} rel="stylesheet" text="text/css" >
     <meta charset="UTF-8">
     <title>Login</title>
   </head>
   <body>
-{% comment %} <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="{% url 'GUI_test' %}">Home</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav2" 
-    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    
-    <div class="collapse navbar-collapse" id="navbarNav2">
-        <ul class="navbar-nav">
-        <li class="nav-item active">
-            <a class="nav-link" href="#">User login <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-            <a id="nav_Canvas" class="nav-link" href="#">Canvas</a>
-        </li>
-        </ul>
-    </div>
-</nav> {% endcomment %}
-  {% include  'app/navbar.html' %}
+  {% include "app/Components/navbar.html" %}
+  {% include "app/Components/GUI_window_navbar.html" %}
+  {% include "app/Components/canvas_javascript.html" %}
   
     <div class='login'>
       <form action="{% url 'login' %}"method="post">{% csrf_token %}
