--- a/app/templates/app/Components/canvas_javascript.html
+++ b/app/templates/app/Components/canvas_javascript.html
@@ -1,5 +1,3 @@
 <script type="text/javascript">
-    if ({{savecode_Data_form}} == null) var data = {}
-    else data = {% autoescape off %}{{savecode_Data_form}}{% endautoescape %}
-    canvas_main(data);
+    canvas_main({});
 </script>
