--- a/app/templates/app/product/product_listup_page.html
+++ b/app/templates/app/product/product_listup_page.html
@@ -28,8 +28,6 @@
         </form>
       {% endfor %}
     </div>
-    <script type="text/javascript">
-      canvas_main({});
-    </script>
+    {% include "app/Components/canvas_javascript.html" %}
   </body>
 </html>
