--- a/app/templates/app/Components/canvas_link.html
+++ b/app/templates/app/Components/canvas_link.html
@@ -1,3 +1,5 @@
 {% load static %}
 <script type="text/javascript" src={% static "./js/GUI_test.js" %}></script>  
 <link href={%static "./css/canvas_styles.css" %} rel="stylesheet" text="text/css" >
+<link href={%static "./css/canvas_styles.css" %} rel="stylesheet" text="text/css" >
+<link href={%static "./css/Image_styles.css" %} rel="stylesheet" text="text/css" >
