--- a/static/css/Image_styles.css
+++ b/static/css/Image_styles.css
@@ -1,3 +1,8 @@
+:root
+{
+    --img_size: 300px;/*size of top image -> #IMGarray*/
+}
+
 #word
 {
     display: block;
@@ -25,7 +30,7 @@ html, body, .container
 {
     position:relative;
     margin:0 auto;
-    height: 400px;
+    height: var(--img_size);
     width: 100%;
 }
 
@@ -33,7 +38,7 @@ html, body, .container
 {
     /* max-width: 100%;
     max-height: 100%; */
-    height: 300px;
+    height: var(--img_size);
     width: 100%;
     position:absolute;
     left:0;
