--- a/app/templates/app/app.html
+++ b/app/templates/app/app.html
@@ -1,10 +1,55 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <link href={%static "./css/self_intro/self_intro.css" %} rel="stylesheet" text="text/css" >
     <title>履歴書</title>
   </head>
   <body>
+    <div class="self_intro"><header>自己紹介</header></div>
+
+    <div id="self_intro_table">
+      <table>
+        <tr>
+          <td class="column1">Name</td>
+          <td class="column2">:</td>
+          <td class="column3">Ip chak yin</td>
+      </tr>
+      </table>
+      
+      <table>
+        <tr>
+          <td class="column1">From</td>
+          <td class="column2">:</td>
+          <td class="column3">Hong Kong</td>
+      </tr>
+      </table>
+      
+      <table>
+        <tr>
+          <td class="column1">Hobby</td>
+          <td class="column2">:</td>
+          <td class="column3">
+            Programming
+          </br>
+            Music
+          </br>
+
+          </td>
+      </tr>
+      </table>
+      
+      <table>
+        <tr>
+          <td class="column1">Name</td>
+          <td class="column2">:</td>
+          <td class="column3">Ip chak yin</td>
+      </tr>
+      </table>
+      
+    </div>
+
     <div class='container'>
       <table>
         <tr>
