--- a/app/templates/app/app.html
+++ b/app/templates/app/app.html
@@ -35,42 +35,22 @@
           </br>
             Music
           </br>
-
+          Cooking
           </td>
       </tr>
       </table>
       
       <table>
         <tr>
-          <td class="column1">Name</td>
+          <td class="column1">Graduate</td>
           <td class="column2">:</td>
-          <td class="column3">Ip chak yin</td>
+          <td class="column3">National Taiwan University Of Science and Technology</td>
       </tr>
       </table>
       
     </div>
 
-    <div class='container'>
-      <table>
-        <tr>
-          <th>Name: Ip chak yin </th><th>Sex: Male</th><th><div><img src=''></img></div></th>
-        </tr>
-      </table>
-      <br>
-      <p>Brithday: 3th february (Age: 22)</p>
-      <p>Address: 新潟県長岡市南七日町31-10ラトゥールサガンA1-4</p>
-      <p>Phone number: 08051992571</p>
-      <p>Address: 新潟県長岡市南七日町31-10ラトゥールサガンA1-4</p>
-      <p>Email Address: hqabcd123@gmail.com</p>
-      <p>Address: 新潟県長岡市南七日町31-10ラトゥールサガンA1-4</p>
-      <table>
-        <tr>
-          <th>Year</th><th>Month</th><th>degree</th>
-        </tr>
-        <tr>
-          <td>1997</td><td>02</td><td>eeeee</td>
-        </tr>
-      </table>
+    
 
       <br>
 
