--- a/static/css/self_intro/self_intro.css
+++ b/static/css/self_intro/self_intro.css
@@ -3,16 +3,48 @@
     background-color: grey;
     height: 200px;
     width: 100%;
+    margin: 0;
 }
 
 .self_intro header
 {
     text-align: center;
-    
+    vertical-align: 70px;
+    font-size: 100%;
+    font: inherit;    
 }
 
 #self_intro_table
 {
     width: 100%;
-    font-size: 20px;
+    font-size: 30px;
+    border-collapse:collapse;
+	border-spacing:0;
+    padding-left: 25%;
+    
+}
+
+#self_intro_table .column1
+{
+    width: 120px;
+    text-align: left;
+    vertical-align: top;
+}
+
+#self_intro_table .column2
+{
+    display: table-cell;
+    padding-left: 20px;
+    padding-right: 20px;
+    text-align: center;
+    vertical-align: top;
+}
+
+#self_intro_table .column3
+{
+    height: 100%;
+    right: 40px;
+    text-align: justify;
+    vertical-align: bottom;
+    margin-left: 50%;
 }
