--- a/app/templates/app/GUI_test.html
+++ b/app/templates/app/GUI_test.html
@@ -53,6 +53,66 @@
     canvas_main(data);
   </script>
 {% endblock canvas %}
+
+{% block advertise %}
+
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    {% for cell in adv %}
+      {% if forloop.first %}
+      <li data-target="#myCarousel" data-slide-to="{{forloop.counter0}}" class="active"></li>
+      {% else %}
+      <li data-target="#myCarousel" data-slide-to="{{forloop.counter0}}"></li>
+      {% endif %}
+    {% endfor %}
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    {% for cell in adv %}
+      {% if forloop.first %}
+      <div class="item active">
+        <img src="{{cell.adv_image.url}}"></img>
+      </div>
+      {% else %}
+      <div class="item">
+        <img src="{{cell.adv_image.url}}"></img>
+      </div>
+      {% endif %}
+    {% endfor %}
+  </div>
+
+  <!-- Left and right controls -->
+  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+
+
+  {% comment %} <div class="adv_slider">
+    {% for cell in adv %}
+      <div class="advertise fade">
+        <img src="{{cell.adv_image.url}}"></img>
+      </div>
+    {% endfor %}
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    <br>
+    <div style="text-align:center">
+      {% for i in adv %}
+      <span class="dot" onclick="currentSlide({{forloop.counter0}})"></span>
+      {% endfor %}
+    </div>
+  </div> {% endcomment %}
+{% endblock advertise %}
+
 {% block image_feedout %}
   <div class='container'>
     <div id="IMGarray">
