--- a/app/templates/app/product/product_listup_page.html
+++ b/app/templates/app/product/product_listup_page.html
@@ -1,33 +1,35 @@
+{% extends 'app/base.html' %}
 {% load static %}
-{% include "app/Components/bootstrap.html" %}
 
+{% block head %}
+<link href={%static "./css/product/product.css" %} rel="stylesheet" text="text/css" >
+{% endblock head %}
 
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <link href={%static "./css/product_page_styles.css" %} rel="stylesheet" text="text/css" >
-    {% include "app/Components/canvas_link.html" %}
-    <title>Product</title>
-  </head>
-  <body>
-    {% include "app/Components/navbar.html" %}
-    {% include "app/Components/GUI_window_navbar.html" %}
-    {% if perms.product_borad.can_add %}<a href="{% url 'add_product' %}">Click here to add product</a>{% endif %}
-    <div>
-      <p>List product: </p>
-      {% for data in Data_form %}
-      <img class="product_image" src="{{data.Product_image.url}}"></img>
-      <p>{{data.product_name}}</p>
-        {% comment %} 
-        <form action=" {%url 'GUI_test'%} " method="post" id="form{{forloop.counter0}}">{% csrf_token %}
-          <a>Saved canvas: </a><a href="JavaScript:;" onclick="document.getElementById('form{{forloop.counter0}}').submit();">{{data.Save_code}}</a>
-          <input type="hidden" name="save_code" value="{{data.Save_code}}"/>
-          <br/>
-          <div><img src="{{data.saved_image.url}}"></img></div> 
-          {% endcomment %}
-        </form>
-      {% endfor %}
-    </div>
-    {% include "app/Components/canvas_javascript.html" %}
-  </body>
-</html>
+{% block title %}Product{% endblock title %}
+
+{% block canvas %}
+{% include "app/Components/canvas_javascript.html" %}
+{% endblock canvas %}
+
+{% block Data_form_import %}
+
+{% if perms.product_borad.can_add %}<a href="{% url 'add_product' %}">Click here to add product</a>{% endif %}
+<div>
+  <p>List product: </p>
+  {% for data in Data_form %}
+  <a href="./{{data.product_code}}">
+    <img class="product_image" src="{{data.Product_image.url}}"></img>
+  </a>
+  <p>{{data.product_name}}</p>
+    {% comment %} 
+    <form action=" {%url 'GUI_test'%} " method="post" id="form{{forloop.counter0}}">{% csrf_token %}
+      <a>Saved canvas: </a><a href="JavaScript:;" onclick="document.getElementById('form{{forloop.counter0}}').submit();">{{data.Save_code}}</a>
+      <input type="hidden" name="save_code" value="{{data.Save_code}}"/>
+      <br/>
+      <div><img src="{{data.saved_image.url}}"></img></div> 
+      {% endcomment %}
+    </form>
+  {% endfor %}
+</div>
+
+{% endblock Data_form_import %}
